# LexOS

./: .dockerignore  .dockerignore.bak  .env  .gitignore  AGENT_LLM_FLOW_MAP.md  BUILD.bazel  Caddyfile  DEPLOYMENT_TASKS.md  Dockerfile  Dockerfile.bak  Keys.env.txt  LexOS Enhancement Action Plan for Cursor.AI  README.md  README.md.bak  WORKSPACE  compose.yaml  compose.yaml.bak.bak  compose.yaml.bak.bak.bak.bak  config.template  deploy-runpod.sh  deploy-tensordock.sh  deploy.ps1  deploy.sh  docker-compose.yml  jest.config.js  lexcommand.service  lexos_complete_platform.txt  lexos_database_dockerfiles (2).sql  lexos_database_dockerfiles.sql  lexos_infrastructure_complete.js  lexos_readme_final.txt  lexos_services_complete (1).py  main.py  package-lock.json  package.json  prometheus.yml  render.yaml  requirements.txt  run.sh  setup-config.sh  (+7 more)
backend/: .env.example  Dockerfile  Dockerfile.bak.bak  Dockerfile.bak.bak.bak  Dockerfile.bak.bak.bak.bak  Dockerfile.txt  api_gateway.py  audio_processing.py  autonomous_config.json  env-example-file.txt  generate_keys.py  main.py  mainbackup.txt  requirements.txt  test_websocket.py  websocket_handlers.py  websocket_server.py  youtube_music.py
frontend/: .env.example  Dockerfile  Dockerfile.bak  README.md  deploy.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
lexcommand-shadow-autonomy/: .env  .pre-commit-config.yaml  Caddyfile  DEPLOYMENT.md  deploy.sh  docker-compose.yml  preflight-checklist.md
lexos_deployment_package/: README.md  docker-compose.yml  (+1 more)
(+349 files in other folders)
