load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

# Create the container image
container_image(
    name = "lexos_image",
    base = "@python_base//image",
    workdir = "/app",
    files = [
        "//:requirements.txt",
        "//:src",
        "//:scripts",
        "//:etc",
    ],
    env = {
        "PYTHONUNBUFFERED": "1",
        "PYTHONDONTWRITEBYTECODE": "1",
        "PYTHONPATH": "/app",
        "PORT": "8000",
    },
    ports = ["8000"],
    tars = [
        "//:lexos_deployment_package",
    ],
)

# Push the image to Docker Hub
container_push(
    name = "push_lexos_image",
    image = ":lexos_image",
    registry = "index.docker.io",
    repository = "lexhelios/lexos",
    tag = "latest",
) 